--- a/docs/.kask/propagate/nav.css
+++ b/docs/.kask/propagate/nav.css
@@ -2,9 +2,11 @@ html {
   position: relative;
   scroll-padding-top: 60px;
 
-  &:has(#navs.open) {
-    height: 100vh;
-    overflow: hidden;
+  @media screen and (width<=800px) {
+    &:has(#navs.open) {
+      height: 100vh;
+      overflow: hidden;
+    }
   }
 }
 
